# ZeroLevelProduct_V9

./: .gitignore  IHX_Drawings.pptx  IHX_Drawings_to_convert_to_py.py  README.md  assemble.py  build_3D_solid.py  changelog.txt  component_anchors.py  component_material_zones.py  component_resolver.py  components_3D_primitives.py  draw_nozzle_geometry.py  draw_redan_params.py  draw_strongback_params.py  from_pptx_to_python.py  homogenise.py  materials.py  profile_built_in_2D_sketch.py  profile_from_straight_connections.py  pyproject.toml  reactor_assembly.py  requirements.txt  utils.py  zzz_claude_ihx_drawing.py
components_premade/: __init__.py  components_premade_above_core_structure.py  components_premade_core.py  components_premade_diagrid.py  components_premade_ihx.py  components_premade_primary_pump.py  components_premade_reactor_vessel.py  components_premade_redan.py  components_premade_strongback.py  components_premade_top_plate.py  old_components_premade_above_core_structure.py  zzz_old_0606_components_premade_above_core_structure.py
examples/: above_core_structure.py  acs_staggered_holes.py  diagrid.py  diagrid_and_primary_pump.py  ihx.py  primary_pump.py  redan.py  redan_ihx_and_primary_pump.py  rv.py  rv_with_top_plate.py  strongback.py
examples_reactor/: esfr_smr_full_reactor_example1.py  esfr_smr_full_reactor_revised.py  esfr_smr_full_reactor_with_redan_example1.py  example2.py
